--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<title>Algorithms and Data Structures</title>
 </head>
 	<script type="text/javascript" src="./sorting.js"></script>
+	<script type="text/javascript" src="./bst.js"></script>
+
 <body>
-	<h1>Soring Algos - See JS File</h1>
+	<h1>Algos in JS - See scripts</h1>
 
 
 </body>
