algo questions from leetcode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 	<script type="text/javascript" src="./sorting.js"></script>
 	<script type="text/javascript" src="./bst.js"></script>
+	<script type="text/javascript" src="./misc.js"></script>	
 
 <body>
 	<h1>Algos in JS - See scripts</h1>
