--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 	<script type="text/javascript" src="./sorting.js"></script>
 	<script type="text/javascript" src="./bst.js"></script>
-	<script type="text/javascript" src="./misc.js"></script>	
+	<script type="text/javascript" src="./misc.js"></script>
+	<script type="text/javascript" src="./cracking_coding_interview.js"></script>		
 
 <body>
 	<h1>Algos in JS - See scripts</h1>
