--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<script type="text/javascript" src="./sorting.js"></script>
 	<script type="text/javascript" src="./bst.js"></script>
 	<script type="text/javascript" src="./misc.js"></script>
-	<script type="text/javascript" src="./cracking_coding_interview.js"></script>		
+	<script type="text/javascript" src="./cracking_coding_interview.js"></script>	
+	<script type="text/javascript" src="./linked_list.js"></script>			
 
 <body>
 	<h1>Algos in JS - See scripts</h1>
-
-
 </body>
 </html>
