--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="./misc.js"></script>
 	<script type="text/javascript" src="./linked_list.js"></script>		
 	<script type="text/javascript" src="./cracking_coding_interview.js"></script>	
-	
+	<script type="text/javascript" src="./misc2.js"></script>		
 
 <body>
 	<h1>Algos in JS - See scripts</h1>
